Jumpstart exactly clones templates and creates new files for them. Needs more finesse on knowing when to stop copying the end of the template.

--- a/jumpstart/template.css
+++ b/jumpstart/template.css
@@ -1,5 +1,5 @@
-body{\n
-    text-align: center;\n
-    font-size: 30px;\n
-    font-family: fantasy, 'Times New Roman', Times, serif;\n
-}\n
+body{
+    text-align: center;
+    font-size: 30px;
+    font-family: fantasy, 'Times New Roman', Times, serif;
+}
